src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Cuprum';
  src: local('Cuprum'), url(./assets/fonts/Cuprum-Regular.ttf);
}

* {
  font-family: 'Cuprum';
}

body {
  background-image: url('/src/assets/imgs/background.png');
  padding: 0 1rem 1rem 1rem;
  z-index: 0;
}

/* Spinner */
.loadingSpinnerContainer {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(105, 105, 105, 0.5);
  z-index: 5000;
  display: flex;
  justify-content: center;
  align-items: center;
}
.loadingSpinner {
  width: 64px;
  height: 64px;
  border: 7px solid;
  border-color: #b91c1c transparent #facc15 transparent;
  border-radius: 75%;
  animation: spin 0.7s linear infinite;
}
@keyframes spin {
  0% {
    transform: rotate(140deg);
  }
  40% {
    transform: rotate(180deg);
  }
  75% {
    transform: rotate(300deg);
  }
  100% {
    transform: rotate(320deg);
  }
}

